--- a/package.json
+++ b/package.json
@@ -27,5 +27,16 @@
   "bugs": {
     "url": "https://github.com/nturing/loom/issues"
   },
-  "homepage": "https://github.com/nturing/loom#readme"
+  "homepage": "https://github.com/nturing/loom#readme",
+  "dependencies": {
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2",
+    "multer": "^1.4.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+}
 }
