--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "multer": "^1.4.5"
+    "multer": "^1.4.5-lts.1",
+    "natural": "^7.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
   },
   "engines": {
     "node": ">=14.0.0"
-}
+  }
 }
