--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Data Visualization Engine for LLMs",
   "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run server.js"
   },
   "repository": {
