--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Data Visualization Engine for LLMs",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
-    "build": "npm run server.js"
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "repository": {
     "type": "git",
